# clib

./: .gitignore  CMakeLists.txt  LICENSE
include/: dynamic_array.h  utilities.h
include/dynamic_array/: CMakeLists.txt  dynamic_array.h
